--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 450px;
+    margin-top: 225px;
     color: crimson;
+    font-size: 55px;
 }
